Security fix: Remove exposed QuickNode credentials from .env.example

--- a/Backend/helix/alpha-strategist.skill/.env.example
+++ b/Backend/helix/alpha-strategist.skill/.env.example
@@ -1,6 +1,6 @@
 # QuickNode Hyperliquid API Configuration
-QUICKNODE_BASE_URL=https://orbital-compatible-wave.hype-mainnet.quiknode.pro/03c818e464f2f0d1fd06ba9d5b4f374c05dd99b4/hypercore
-QUICKNODE_API_KEY=03c818e464f2f0d1fd06ba9d5b4f374c05dd99b4
+QUICKNODE_BASE_URL=https://your-endpoint.hype-mainnet.quiknode.pro/your-api-key/hypercore
+QUICKNODE_API_KEY=your_quicknode_api_key_here
 
 # Polymarket API (no auth required)
 POLYMARKET_BASE_URL=https://gamma-api.polymarket.com
